Fix OpenApi Authorization
